ci: remove versio tracking branch from binary building

--- a/.github/workflows/build-releases.yml
+++ b/.github/workflows/build-releases.yml
@@ -1,8 +1,8 @@
 name: Build GitHub Releases
 "on":
   push:
-    tags:
-      - "*"
+    tags-ignore:
+      - "versio-prev"
 jobs:
   build:
     runs-on: "${{ matrix.os }}"
