--- a/.versio.yaml
+++ b/.versio.yaml
@@ -2,15 +2,15 @@ options:
   prev_tag: versio-prev
 
 projects:
-- name: fix-compaudit
-  id: 1
-  tag_prefix: ''
-  labels: cargo
-  version:
-    file: Cargo.toml
-    toml: package.version
-  hooks:
-    post_write: cargo fetch
+  - name: fix-compaudit
+    id: 1
+    tag_prefix: ""
+    labels: cargo
+    version:
+      file: Cargo.toml
+      toml: package.version
+    hooks:
+      post_write: cargo fetch
 
 sizes:
   use_angular: true
